fixed dom flickering

--- a/portfolio.css
+++ b/portfolio.css
@@ -22,6 +22,9 @@ body {
   height: 100vh;
   transition: 0.4s;
 }
+.hidden {
+  display: none;
+}
 
 main {
   position: relative;
